Makefile support for gen_ebucore_classes.

--- a/tools/gen_ebucore_classes/Makefile.am
+++ b/tools/gen_ebucore_classes/Makefile.am
@@ -1,8 +1,8 @@
-noinst_PROGRAMS = gen_metadata_classes
+noinst_PROGRAMS = gen_ebucore_classes
 
-gen_metadata_classes_SOURCES = gen_metadata_classes.cpp
-gen_metadata_classes_CXXFLAGS = $(LIBMXFPP_CFLAGS)
-gen_metadata_classes_LDADD = $(LIBMXF_LIBS)
+gen_ebucore_classes_SOURCES = gen_ebucore_classes.cpp
+gen_ebucore_classes_CXXFLAGS = $(LIBMXFPP_CFLAGS)
+gen_ebucore_classes_LDADD = $(LIBMXF_LIBS)
 
 
 .PHONY: generate
@@ -19,8 +19,6 @@ firstcopy: generate
 	mkdir -p ${top_srcdir}/libMXF++/metadata/base
 	cp -R generated/* ${top_srcdir}/libMXF++/metadata
 	cp Metadata.h ${top_srcdir}/libMXF++/metadata
-
-
 
 EXTRA_DIST = README.txt
 
