--- a/tools/gen_ebucore_classes/Makefile.am
+++ b/tools/gen_ebucore_classes/Makefile.am
@@ -1,8 +1,8 @@
 noinst_PROGRAMS = gen_ebucore_classes
 
 gen_ebucore_classes_SOURCES = gen_metadata_classes.cpp
-gen_ebucore_classes_CXXFLAGS = $(LIBMXFPP_CFLAGS)
-gen_ebucore_classes_LDADD = $(LIBMXF_LIBS)
+gen_ebucore_classes_CXXFLAGS = $(BMX_CFLAGS)
+gen_ebucore_classes_LDADD = $(BMX_LDADDLIBS)
 
 
 .PHONY: generate
