Also compile EBUCoreDMS.cpp.

--- a/tools/gen_ebucore_classes/Makefile.am
+++ b/tools/gen_ebucore_classes/Makefile.am
@@ -1,6 +1,6 @@
 noinst_PROGRAMS = gen_ebucore_classes
 
-gen_ebucore_classes_SOURCES = gen_metadata_classes.cpp
+gen_ebucore_classes_SOURCES = EBUCoreDMS.cpp gen_metadata_classes.cpp
 gen_ebucore_classes_CXXFLAGS = $(BMX_CFLAGS)
 gen_ebucore_classes_LDADD = $(BMX_LDADDLIBS)
 
