--- a/EBUCoreProcessor/msvc_build/vs10/apps/mxf2raw/mxf2raw.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/apps/mxf2raw/mxf2raw.vcxproj
@@ -53,7 +53,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\apps\mxf2raw;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXFpp;..\..\..\..\..\uriparser\include;..\..\..\..\include;..\..\..\..\EBUCoreProcessor\include;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\;..\..\..\..\apps;..\..\..\..\..\ebu-libMXF;..\..\..\..\..\ebu-libMXFpp;..\..\..\..\..\ebu-bmx\include;..\..\..\..\..\CustomMetadataSupport\include;..\..\..\..\..\..\uriparser\include;..\..\..\..\include;..;..\..\..\..\EBUCoreProcessor\include;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -64,8 +64,8 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;EBUCoreProcessor.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\uriparser\win32;..\..\bmx\Debug;..\..\..\..\msvc_build\vs10\Debug;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;CustomMetatadataSupport.lib;EBUCoreProcessor.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\..\uriparser\win32;..\..\bmx\Debug;..\..\..\..\msvc_build\vs10\Debug;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
@@ -82,8 +82,8 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Release;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Release;..\..\..\..\..\uriparser\win32;..\..\bmx\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;CustomMetatadataSupport.lib;EBUCoreProcessor.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Debug;..\..\..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Debug;..\..\..\..\..\..\uriparser\win32;..\..\bmx\Debug;..\..\..\..\msvc_build\vs10\Debug;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
@@ -102,12 +102,6 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\apps\AppUtils.h" />
     <ClInclude Include="..\..\..\..\apps\AS11Helper.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\bmx\bmx.vcxproj">
-      <Project>{d6ad7523-372a-4cc3-8aea-0ec52d955359}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
