--- a/EBUCoreProcessor/msvc_build/vs10/apps/raw2bmx/raw2bmx.vcproj
+++ b/EBUCoreProcessor/msvc_build/vs10/apps/raw2bmx/raw2bmx.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\;..\..\..\..\apps;..\..\..\..\..\libMXF;..\..\..\..\..\libMXF++;..\..\..\..\..\uriparser\include;..\..\..\..\include;.."
+				AdditionalIncludeDirectories="..\..\;..\..\..\..\apps;..\..\..\..\..\libMXF;..\..\..\..\..\..\ebu-bmx\include;..\..\..\..\..\libMXF++;..\..\..\..\..\uriparser\include;..\..\..\..\include;.."
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
