--- a/EBUCoreProcessor/apps/mxf2ebu/Makefile.am
+++ b/EBUCoreProcessor/apps/mxf2ebu/Makefile.am
@@ -2,7 +2,7 @@ bin_PROGRAMS = mxf2ebu
 
 mxf2ebu_SOURCES = mxf2ebu.cpp
 
-mxf2ebu_CXXFLAGS = $(BMX_CFLAGS)
-mxf2ebu_LDADD = $(BMX_LDADDLIBS)
+mxf2ebu_CXXFLAGS = $(EBUSDK_CFLAGS)
+mxf2ebu_LDADD = $(EBUSDK_LDADDLIBS)
 
 
