--- a/Analyzer/msvc_build/vs10/Analyzer.vcxproj
+++ b/Analyzer/msvc_build/vs10/Analyzer.vcxproj
@@ -29,7 +29,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
@@ -50,6 +50,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\..\..\bin</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -57,7 +58,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>.;..\..\include;..\..\..\..\apps;..\..\..\ebu-libMXF;..\..\..\ebu-libMXFpp;..\..\..\ebu-bmx\include;..\..\..\CustomMetadataSupport\include;..\..\..\EBUCoreProcessor\include;..\..\..\..\uriparser\include;..\..\..\include;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;..\..\include;..\..\..\..\apps;..\..\..\ebu-libMXF;..\..\..\ebu-libMXFpp;..\..\..\ebu-bmx\include;..\..\..\CustomMetadataSupport\include;..\..\..\EBUCoreProcessor\include;..\..\..\uriparser\include;..\..\..\include;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -76,11 +77,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>.;..\..\include;..\..\..\..\apps;..\..\..\ebu-libMXF;..\..\..\ebu-libMXFpp;..\..\..\ebu-bmx\include;..\..\..\CustomMetadataSupport\include;..\..\..\EBUCoreProcessor\include;..\..\..\uriparser\include;..\..\..\include;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <AdditionalDependencies>libMXF.lib;libMXF++.lib;uriparser.lib;bmx.lib;CustomMetatadataSupport.lib;xerces-c_3D.lib;ole32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\ebu-libMXF\msvc_build\vs10\mxf\Release;..\..\..\ebu-libMXFpp\msvc_build\vs10\libMXF++\Release;..\..\..\CustomMetadataSupport\msvc_build\vs10\Release;..\..\..\uriparser\win32;..\..\..\ebu-bmx\msvc_build\vs10\bmx\Release;..\..\..\..\msvc_build\vs10\Release;C:\code\EBU-SDK\xerces-c-3.1.1-x86-windows-vc-10.0\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
