Updated EBUCore to the latest schema and recompiled XSD-derived code. Shuffled with generated output such that DC and XML-related code is version-independent.

--- a/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj
@@ -225,8 +225,8 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreTypeGroup.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreVersion.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreVideoFormat.cpp" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\xsd\EBU_CORE_20120817.cxx" />
-    <ClCompile Include="..\..\src\EBUCore_1_4\xsd\simpledc20021212.cxx" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\xsd\EBU_CORE_20121219.cxx" />
+    <ClCompile Include="..\..\src\xsd\simpledc20021212.cxx" />
     <ClCompile Include="..\..\src\xsd\xml.cxx" />
   </ItemGroup>
   <ItemGroup>
