--- a/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj.filters
+++ b/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj.filters
@@ -476,14 +476,8 @@
     <ClCompile Include="..\..\src\xsd\xml.cxx">
       <Filter>Source Files\xsd</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\EBUCore_1_4\xsd\simpledc20021212.cxx">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreType.cpp">
       <Filter>Source Files\EBUCore_1_4\metadata</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\EBUCore_1_4\xsd\EBU_CORE_20120817.cxx">
-      <Filter>Source Files\EBUCore_1_4\xsd</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\EBUCore_1_4\EBUCoreMapping.cpp">
       <Filter>Source Files\EBUCore_1_4</Filter>
@@ -496,6 +490,12 @@
     </ClCompile>
     <ClCompile Include="..\..\src\EBUCore_1_4\EBUCoreProcessor_1_4.cpp">
       <Filter>Source Files\EBUCore_1_4</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\EBUCore_1_4\xsd\EBU_CORE_20121219.cxx">
+      <Filter>Source Files\EBUCore_1_4\xsd</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\xsd\simpledc20021212.cxx">
+      <Filter>Source Files\xsd</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
