Made updates to dictionary and derived source files to match updated EBUCore (except Format elements and related).

--- a/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj
+++ b/EBUCoreProcessor/msvc_build/vs10/EBUCoreProcessor.vcxproj
@@ -87,14 +87,17 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreAncillaryDataBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreAspectRatioBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreAudioFormatBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreBasicLinkBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreBasicRelationBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCaptioningBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCodecBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCompoundNameBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreContactBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreContactDetailsBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreContainerFormatBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCoordinatesBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCoreMetadataBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCountryBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCoverageBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreCustomRelationBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreDataFormatBase.cpp" />
@@ -123,10 +126,15 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePartFrameworkBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePartMetadataBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePeriodOfTimeBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePublicationChannelBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePublicationHistoryBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePublicationHistoryEventBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucorePublicationMediumBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreRatingBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreRationalBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreRegionBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreRightsBase.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreRoleBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreSigningFormatBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreSpatialBase.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\base\ebucoreStatusGroupBase.cpp" />
@@ -158,14 +166,17 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreAncillaryData.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreAspectRatio.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreAudioFormat.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreBasicLink.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreBasicRelation.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCaptioning.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCodec.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCompoundName.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreContact.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreContactDetails.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreContainerFormat.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCoordinates.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCoreMetadata.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCountry.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCoverage.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreCustomRelation.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreDataFormat.cpp" />
@@ -195,10 +206,15 @@
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePartFramework.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePartMetadata.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePeriodOfTime.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePublicationChannel.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePublicationHistory.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePublicationHistoryEvent.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucorePublicationMedium.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreRating.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreRational.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreRegion.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreRights.cpp" />
+    <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreRole.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreSigningFormat.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreSpatial.cpp" />
     <ClCompile Include="..\..\src\EBUCore_1_4\metadata\ebucoreStatusGroup.cpp" />
