Appended LDFLAGS to Makefile input to make sure all libs are picked up.

--- a/CustomMetadataSupport/src/Makefile.am
+++ b/CustomMetadataSupport/src/Makefile.am
@@ -5,4 +5,4 @@ libebucustommetadatasupport_la_SOURCES = \
     MXFCustomMetadata.cpp
 
 libebucustommetadatasupport_la_CXXFLAGS = $(EBUSDK_CFLAGS)
-
+libebucustommetadatasupport_la_LDFLAGS = $(EBUSDK_LIBADDLIBS)
