--- a/EBUCoreProcessor/src/Makefile.am
+++ b/EBUCoreProcessor/src/Makefile.am
@@ -153,4 +153,5 @@ libebucore_la_SOURCES = \
 	AppUtils.cpp
 
 libebucore_la_CXXFLAGS = $(EBUSDK_CFLAGS)
+libebucore_la_LDFLAGS = $(EBUSDK_LIBADDLIBS)
 
